--- a/5. Final Submission/notes-app/src/global.scss
+++ b/5. Final Submission/notes-app/src/global.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&family=Inter:wght@400;500;700&display=swap');
 
 body{
-    background-color: $white;
+    background-color: black;
     font-family: $main-font;
     margin: 0;
     box-sizing: border-box;
