--- a/5. Final Submission/notes-app/src/global.scss
+++ b/5. Final Submission/notes-app/src/global.scss
@@ -7,6 +7,12 @@ body{
     margin: 0;
     box-sizing: border-box;
 }
+ul
+{
+list-style: none;
+padding: 0;
+margin: 0;
+}
 
 html, body{
     overflow-x: hidden;
