--- a/5. Final Submission/notes-app/src/components/molecules/Modal/Modal.module.scss
+++ b/5. Final Submission/notes-app/src/components/molecules/Modal/Modal.module.scss
@@ -1,5 +1,21 @@
-.test{
-    width: 100px;
-    height: 1000px;
-    background-color: white;
+@use '../../../variables.scss' as *;
+
+.modal{
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    width: 90%;
+    height: 75%;
+    border-radius: 25px;
+    background-color: $orange;
+    transform: translate(-50%, -50%);
 }
+
+
+.modal-content{
+    margin-top: 5vh;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
