--- a/5. Final Submission/notes-app/src/components/molecules/Modal/Modal.module.scss
+++ b/5. Final Submission/notes-app/src/components/molecules/Modal/Modal.module.scss
@@ -19,3 +19,15 @@
     margin-right: auto;
 }
 
+@media only screen and (min-width: 600px) {
+    .modal{
+        width: 95%;
+    }
+}
+
+
+@media only screen and (min-width: 800px) {
+    .modal{
+        max-width: 800px;
+    }
+}
