--- a/5. Final Submission/notes-app/src/components/molecules/Modal/Modal.module.scss
+++ b/5. Final Submission/notes-app/src/components/molecules/Modal/Modal.module.scss
@@ -5,15 +5,42 @@
     left: 50%;
     top: 50%;
     width: 90%;
-    height: 75%;
+    height: fit-content;
     border-radius: 25px;
     background-color: $orange;
     transform: translate(-50%, -50%);
+    padding-top: 2vh;
+    padding-bottom: 3vh;
 }
 
+.close-modal__button{
+    margin-bottom: 2vh;
+    width: 95%;
+    justify-content: flex-end;
+    display: flex;
+    button{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+        font-family: $main-font;
+        background-color: transparent;
+        color: white;
+        border: none;
+        border: 2px solid transparent;
+        border-radius: 10px;
+        transition: ease-in 0.2s;
+        img{
+            width: 16px;
+            height: 16px;
+        }
+    }
+    button:hover{
+        border: 2px solid $white;
+    }
+}
 
 .modal-content{
-    margin-top: 5vh;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
