--- a/5. Final Submission/notes-app/src/variables.scss
+++ b/5. Final Submission/notes-app/src/variables.scss
@@ -16,3 +16,4 @@ $green-shadow: rgba(78, 159, 61, 0.4) 0px 30px 90px;
 $red: #F05454;
 $red-dark: #b94242;
 $red-shadow: rgba(240, 84, 84, 0.4) 0px 30px 90px;
+$red-alert: #EC2525;
