--- a/5. Final Submission/notes-app/src/components/atoms/Input/Input.module.scss
+++ b/5. Final Submission/notes-app/src/components/atoms/Input/Input.module.scss
@@ -28,3 +28,11 @@
 .custom-input::-ms-input-placeholder { /* Microsoft Edge */
     color: white;
 }
+
+.custom-label{
+    font-size: 16px;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    color: $white;
+}
