Finish Create and Read Note

--- a/5. Final Submission/notes-app/src/components/molecules/ColorButtons/ColorButtons.module.scss
+++ b/5. Final Submission/notes-app/src/components/molecules/ColorButtons/ColorButtons.module.scss
@@ -32,3 +32,14 @@
 .selected{
     border: 5px solid white !important;
 }
+
+@media only screen and (min-width: 600px) {
+    .colors-button{
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+        gap: 20px;
+        display: flex;
+        justify-content: flex-start;
+    }
+}
