Finish delete and Edit

--- a/5. Final Submission/notes-app/src/components/atoms/TextArea/TextArea.module.scss
+++ b/5. Final Submission/notes-app/src/components/atoms/TextArea/TextArea.module.scss
@@ -9,6 +9,7 @@
     resize: none; 
     padding-bottom: 15px;
     font-size: 18px;
+    line-height: 27px;
     font-weight: bold;
     font-family: $main-font;
     background-color: transparent;
