--- a/5. Final Submission/notes-app/src/components/molecules/NoteList/NoteList.module.scss
+++ b/5. Final Submission/notes-app/src/components/molecules/NoteList/NoteList.module.scss
@@ -1,5 +1,6 @@
-.note-list{
+@use '../../../variables.scss' as *;
 
+.note-list{
     display: flex;
     flex-direction: column;
     gap: 35px;
@@ -31,4 +32,11 @@
     .note-row{
         gap: 50px;
     }
+}
+
+.empty-note{
+    font-size: 2em;
+    font-weight: bold;
+    text-align: center;
+    color: $white;
 }
